--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "build": "coffee -o tasks --bare --compile --map src",
+    "prepublish": "npm run build",
+    "clean": "rm -f tasks/*.{js,map}",
+    "test": "npm run build && grunt test"
   },
   "dependencies": {
-    "coffee-script": ">=1.6.3",
     "grunt-contrib-watch": "~0.5.3"
   },
   "devDependencies": {
+    "coffee-script": ">=1.6.3",
     "grunt": "~0.4.2",
     "grunt-coffeelint": "0.0.8",
     "grunt-contrib-nodeunit": "~0.3.0",
